generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  CUSTOMER
  SELLER
  ADMIN
}

enum OrderStatus {
  PENDING
  PAID
  PROCESSING
  SHIPPED
  OUT_FOR_DELIVERY
  DELIVERED
  CANCELLED
  RETURNED
  FAILED
}

enum PaymentStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
  REFUNDED
}

enum PayoutStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
}

enum BalanceStatus {
  PENDING
  AVAILABLE
  LOCKED
  PAID
}

enum ShipmentStatus {
  PENDING
  PICKED_UP
  IN_TRANSIT
  OUT_FOR_DELIVERY
  DELIVERED
  FAILED
  RETURNED
}

model User {
  id            String   @id @default(uuid())
  email         String   @unique
  password      String
  name          String
  role          Role     @default(CUSTOMER)
  phone         String?
  googleId      String?  @unique
  avatar        String?
  provider      String?
  emailVerified Boolean? @default(false)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  orders        Order[]
  cartItems     CartItem[]
  addresses     ShippingAddress[]
  sellerAccount Seller?
}

model Category {
  id          String    @id @default(uuid())
  name        String    @unique
  slug        String    @unique
  description String?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  products    Product[]
}

model Product {
  id          String   @id @default(uuid())
  name        String
  slug        String   @unique
  description String
  price       Decimal  @db.Decimal(10, 2)
  categoryId  String
  sellerId    String
  stock       Int      @default(0)
  images      String[]
  isActive    Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  category    Category     @relation(fields: [categoryId], references: [id])
  seller      Seller       @relation(fields: [sellerId], references: [id])
  inventory   Inventory?
  cartItems   CartItem[]
  orderItems  OrderItem[]
}

model Inventory {
  id          String   @id @default(uuid())
  productId   String   @unique
  quantity    Int      @default(0)
  reserved    Int      @default(0)
  available   Int      @default(0)
  lowStockThreshold Int @default(10)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  product     Product  @relation(fields: [productId], references: [id])
}

model CartItem {
  id        String   @id @default(uuid())
  userId    String
  productId String
  quantity  Int      @default(1)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user      User     @relation(fields: [userId], references: [id])
  product   Product  @relation(fields: [productId], references: [id])

  @@unique([userId, productId])
}

model Order {
  id              String        @id @default(uuid())
  userId          String
  orderNumber     String        @unique
  status          OrderStatus   @default(PENDING)
  subtotal        Decimal       @db.Decimal(10, 2)
  tax             Decimal       @default(0) @db.Decimal(10, 2)
  shipping        Decimal       @default(0) @db.Decimal(10, 2)
  discount        Decimal       @default(0) @db.Decimal(10, 2)
  total           Decimal       @db.Decimal(10, 2)
  currency        String        @default("USD")
  notes           String?
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt

  user            User          @relation(fields: [userId], references: [id])
  items           OrderItem[]
  payment         Payment?
  shipment        Shipment?
  shippingAddress ShippingAddress?
}

model OrderItem {
  id        String   @id @default(uuid())
  orderId   String
  productId String
  quantity  Int
  price     Decimal  @db.Decimal(10, 2)
  total     Decimal  @db.Decimal(10, 2)
  createdAt DateTime @default(now())

  order     Order    @relation(fields: [orderId], references: [id])
  product   Product  @relation(fields: [productId], references: [id])
}

model Payment {
  id                String        @id @default(uuid())
  orderId           String        @unique
  paymentIntentId   String        @unique
  amount            Decimal       @db.Decimal(10, 2)
  currency          String        @default("USD")
  status            PaymentStatus @default(PENDING)
  clientSecret      String?
  metadata          Json?
  createdAt         DateTime      @default(now())
  updatedAt         DateTime      @updatedAt

  order             Order         @relation(fields: [orderId], references: [id])
  logs              PaymentLog[]
}

model PaymentLog {
  id          String   @id @default(uuid())
  paymentId   String
  event       String
  status      String
  message     String?
  metadata    Json?
  createdAt   DateTime @default(now())

  payment     Payment  @relation(fields: [paymentId], references: [id])
}

model ShippingAddress {
  id          String   @id @default(uuid())
  userId      String
  orderId     String?  @unique
  fullName    String
  addressLine1 String
  addressLine2 String?
  city        String
  state       String
  postalCode  String
  country     String
  phone       String
  isDefault   Boolean  @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  user        User     @relation(fields: [userId], references: [id])
  order       Order?   @relation(fields: [orderId], references: [id])
}

model Seller {
  id                String   @id @default(uuid())
  userId            String   @unique
  businessName      String
  businessEmail     String
  businessPhone     String?
  taxId             String?
  bankAccount       String?
  bankName          String?
  isVerified        Boolean  @default(false)
  isActive          Boolean  @default(true)
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  user              User            @relation(fields: [userId], references: [id])
  products          Product[]
  balance           SellerBalance?
  ledger            SellerLedger[]
  payouts           Payout[]
  escrow            Escrow[]
}

model SellerBalance {
  id            String         @id @default(uuid())
  sellerId      String         @unique
  pending       Decimal        @default(0) @db.Decimal(10, 2)
  available     Decimal        @default(0) @db.Decimal(10, 2)
  locked        Decimal        @default(0) @db.Decimal(10, 2)
  paid          Decimal        @default(0) @db.Decimal(10, 2)
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt

  seller        Seller         @relation(fields: [sellerId], references: [id])
}

model SellerLedger {
  id          String   @id @default(uuid())
  sellerId    String
  type        String
  amount      Decimal  @db.Decimal(10, 2)
  balance     Decimal  @db.Decimal(10, 2)
  description String
  referenceId String?
  metadata    Json?
  createdAt   DateTime @default(now())

  seller      Seller   @relation(fields: [sellerId], references: [id])
}

model Escrow {
  id          String   @id @default(uuid())
  sellerId    String
  orderId     String?
  amount      Decimal  @db.Decimal(10, 2)
  status      BalanceStatus @default(PENDING)
  releaseAt   DateTime
  releasedAt  DateTime?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  seller      Seller   @relation(fields: [sellerId], references: [id])
}

model Payout {
  id              String        @id @default(uuid())
  sellerId        String
  amount          Decimal       @db.Decimal(10, 2)
  status          PayoutStatus  @default(PENDING)
  bankAccount     String
  bankName        String
  referenceId     String?
  failureReason   String?
  retryCount      Int           @default(0)
  nextRetryAt     DateTime?
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt

  seller          Seller        @relation(fields: [sellerId], references: [id])
  logs            PayoutLog[]
}

model PayoutLog {
  id          String   @id @default(uuid())
  payoutId    String
  status      String
  message     String?
  metadata    Json?
  createdAt   DateTime @default(now())

  payout      Payout   @relation(fields: [payoutId], references: [id])
}

model Warehouse {
  id          String   @id @default(uuid())
  name        String
  pincode     String
  address     String?
  city        String?
  state       String?
  country     String?
  isPrimary   Boolean  @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  shipments   Shipment[]
}

model Courier {
  id            String   @id @default(uuid())
  name          String   @unique
  code          String   @unique
  serviceLevel  String?
  isActive      Boolean  @default(true)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  shipments     Shipment[]
}

model ShippingRate {
  id                  String   @id @default(uuid())
  courierName         String
  service             String
  originPincode       String
  destinationPincode  String
  weight              Decimal  @db.Decimal(10, 2)
  estimatedDays       Int
  shippingCost        Decimal  @db.Decimal(10, 2)
  createdAt           DateTime @default(now())
}

model ShippingLabel {
  id            String   @id @default(uuid())
  shipmentId    String   @unique
  labelUrl      String?
  pdfUrl        String?
  awb           String?
  courierName   String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  shipment      Shipment @relation(fields: [shipmentId], references: [id])
}

model Shipment {
  id                String          @id @default(uuid())
  orderId           String          @unique
  trackingNumber    String          @unique
  awb               String?
  shipmentId        String?
  pickupId          String?
  courierName       String?
  shippingLabelUrl  String?
  labelPdfUrl       String?
  estimatedDelivery DateTime?
  status            ShipmentStatus  @default(PENDING)
  weight            Decimal         @db.Decimal(10, 2)
  length            Decimal         @db.Decimal(10, 2)
  width             Decimal         @db.Decimal(10, 2)
  height            Decimal         @db.Decimal(10, 2)
  shippingCost      Decimal         @db.Decimal(10, 2)
  warehousePincode  String
  destinationPincode String
  warehouseId       String?
  courierId         String?
  createdAt         DateTime        @default(now())
  updatedAt         DateTime        @updatedAt

  order             Order           @relation(fields: [orderId], references: [id])
  warehouse         Warehouse?      @relation(fields: [warehouseId], references: [id])
  courier           Courier?        @relation(fields: [courierId], references: [id])
  trackingHistory   TrackingHistory[]
  shippingLabel     ShippingLabel?
  shipmentLogs      ShipmentLog[]
}

model TrackingHistory {
  id            String   @id @default(uuid())
  shipmentId    String
  trackingNumber String?
  status        String
  location      String?
  description   String?
  timestamp     DateTime @default(now())

  shipment      Shipment @relation(fields: [shipmentId], references: [id])
}

model ShipmentLog {
  id          String   @id @default(uuid())
  shipmentId  String
  event       String
  message     String?
  metadata    Json?
  createdAt   DateTime @default(now())

  shipment    Shipment @relation(fields: [shipmentId], references: [id])
}

model WebhookLog {
  id          String   @id @default(uuid())
  source      String
  eventId     String
  eventType   String
  payload     Json
  processed   Boolean  @default(false)
  error       String?
  createdAt   DateTime @default(now())
}

model Notification {
  id          String   @id @default(uuid())
  userId      String
  title       String
  message     String
  type        String
  isRead      Boolean  @default(false)
  createdAt   DateTime @default(now())
}

model EmailQueue {
  id          String   @id @default(uuid())
  to          String
  subject     String
  template    String
  data        Json
  status      String   @default("pending")
  attempts    Int      @default(0)
  sentAt      DateTime?
  error       String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model IdempotencyKey {
  id          String   @id @default(uuid())
  key         String   @unique
  response    Json
  createdAt   DateTime @default(now())
  expiresAt   DateTime
}

model AuditLog {
  id          String   @id @default(uuid())
  userId      String?
  action      String
  entity      String
  entityId    String?
  changes     Json?
  ipAddress   String?
  userAgent   String?
  createdAt   DateTime @default(now())
}
